--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -465,33 +465,31 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-popup {
 	position: absolute;
-	text-align: center;
+	text-align: left;
 	margin-bottom: 20px;
 	}
 .leaflet-popup-content-wrapper {
 	padding: 1px;
+	text-align: start;
 	text-align: left;
 	border-radius: 12px;
 	}
 .leaflet-popup-content {
 	margin: 13px 19px;
 	line-height: 1.4;
+	width: 100%;
 	}
 .leaflet-popup-content p {
 	margin: 18px 0;
 	}
 .leaflet-popup-tip-container {
-	width: 40px;
-	height: 20px;
 	position: absolute;
-	left: 50%;
+	left: 100%;
 	margin-left: -20px;
 	overflow: hidden;
 	pointer-events: none;
 	}
 .leaflet-popup-tip {
-	width: 17px;
-	height: 17px;
 	padding: 1px;
 
 	margin: -10px auto 0;
@@ -506,6 +504,8 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	background: white;
 	color: #333;
 	box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+	height: auto;
+	width: auto;
 	}
 .leaflet-container a.leaflet-popup-close-button {
 	position: absolute;
@@ -535,7 +535,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	zoom: 1;
 	}
 .leaflet-oldie .leaflet-popup-tip {
-	width: 24px;
+	width: auto;
 	margin: 0 auto;
 
 	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678)";
