--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,29 @@
 
 .right_box{
-	background: red;
-    width: 25%;
-    height: 500px;
-	float: right
+    width: 38%;
+	float: right;
+    vertical-align: top;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+.swot-style{
+    vertical-align: top;
+    font-size: 10pt;
+
+}
+.swot-style-title{
+    font-size: 15pt;
+    font-weight: bold;
+
+}
+
+.swot-style-type{
+    vertical-align: top;
+    text-align: center;
+    font-size: 15pt;
+    font-weight: bold;
+}
+
+.buildings-style{
+    margin-top: 40%;
 }
