--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,11 @@
 .swot-style{
     vertical-align: top;
     font-size: 10pt;
+    width: 50%;
 
 }
 .swot-style-title{
+    text-align: center;
     font-size: 15pt;
     font-weight: bold;
 
@@ -44,6 +46,10 @@
     margin: 0;
     padding: 0;
     display: none;
+    border: grey;
+    border-width: 2px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(122,122,122,0.5);
 }
 
 /* при отображении модального окно */
@@ -57,14 +63,13 @@
 }
 .close {
     float: right;
-    font-family: sans-serif;
-    font-size: 50px;
-    font-weight: 700;
+    font-size: 40px;
     line-height: 1;
     color: #000;
-    text-shadow: 0 1px 0 #fff;
     opacity: .5;
     text-decoration: none;
+    margin-right: 10px;
+    padding-right: 10px;
 }
 /* свойства для кнопки "Закрыть" при нахождении её в фокусе или наведении */
 .close:focus, .close:hover {
@@ -77,4 +82,8 @@
 .modal_content{
     height: 100%;
     overflow: auto;
+    border: grey;
+    border-width: 2px;
+    padding: 10px;
+    border: grey;
 }
