--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,75 @@
     margin-right: 5px;
     margin-left: 5px;
 }
-.swot-style{
-    vertical-align: top;
-    font-size: 10pt;
-    width: 50%;
 
+.grid{
+    display: grid;
+    width: 100%;
 }
+
 .swot-style-title{
     text-align: center;
     font-size: 15pt;
     font-weight: bold;
-
 }
 
-.swot-style-type{
+.swot-style-type-1{
     vertical-align: top;
     text-align: center;
     font-size: 15pt;
     font-weight: bold;
+    grid-column: 1;
+    grid-row: 1;
 }
+.swot-style-1{
+    vertical-align: top;
+    font-size: 10pt;
+    grid-column: 1;
+    grid-row: 2;
+}
+.swot-style-type-2{
+    vertical-align: top;
+    text-align: center;
+    font-size: 15pt;
+    font-weight: bold;
+    grid-column: 2;
+    grid-row: 1;
+}
+.swot-style-2{
+    vertical-align: top;
+    font-size: 10pt;
+    grid-column: 2;
+    grid-row: 2;
+}
+.swot-style-type-3{
+    vertical-align: top;
+    text-align: center;
+    font-size: 15pt;
+    font-weight: bold;
+    grid-column: 1;
+    grid-row: 3;
+}
+.swot-style-3{
+    vertical-align: top;
+    font-size: 10pt;
+    grid-column: 1;
+    grid-row: 4;
+}
+.swot-style-type-4{
+    vertical-align: top;
+    text-align: center;
+    font-size: 15pt;
+    font-weight: bold;
+    grid-column: 2;
+    grid-row: 3;
+}
+.swot-style-4{
+    vertical-align: top;
+    font-size: 10pt;
+    grid-column: 2;
+    grid-row: 4;
+}
+
 
 .body-style{
     background-color:#efefef;
@@ -87,3 +137,4 @@
     padding: 10px;
     border: grey;
 }
+
